--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ python-dotenv==1.1.1
 pydantic>=2.8.0
 sqlalchemy>=2.0.30
 psycopg2-binary
-alembic==1.17.0
+alembic>=1.16.0
 pillow>=10.0.0
 pytesseract==0.3.10
 numpy>=1.26.0
@@ -20,7 +20,6 @@ opencv-python-headless>=4.9.0.80
 httpx==0.27.0
 itsdangerous==2.2.0
 pillow-heif==0.16.0
-pyheif==0.7.1
 requests==2.32.5
 pytz==2024.2
 rapidocr-onnxruntime>=1.3.7
